tests/scripts/type_errors/method_does_not_exist.roto
fn foo(msg: u32) {
	msg.foo();
}
